infrastructure/minio/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: minio
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: minio
  replicas: 4
  serviceName: minio-headless
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: minio
      annotations:
        vault.security.banzaicloud.io/vault-addr: http://vault.infrastructure:8200
        vault.security.banzaicloud.io/vault-role: minio
        vault.security.banzaicloud.io/vault-namespace: infrastructure
    spec:
      serviceAccountName: minio
      securityContext:
        fsGroup: 1001
      containers:
        - name: minio
          image: bitnami/minio:2022.5.8-debian-10-r0
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: http
              protocol: TCP
              containerPort: 9000
            - name: http-console
              protocol: TCP
              containerPort: 9001
          resources:
            limits: {}
            requests: {}
          livenessProbe:
            httpGet:
              path: /minio/health/live
              port: http
              scheme: "HTTP"
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5

  volumeClaimTemplates:
    - metadata:
        name: data
        namespace: infrastructure
        labels:
          app.kubernetes.io/name: minio
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "1Gi"
        storageClassName: scw-bssd-retain
