infrastructure/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/part-of: minio
    app.kubernetes.io/component: minio
    app.kubernetes.io/version: 2022.5.8
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
    - name: http-console
      protocol: TCP
      port: 9001
      targetPort: http-console
---
apiVersion: v1
kind: Service
metadata:
  name: minio-headless
  namespace: infrastructure
  labels:
    app.kubernetes.io/name: minio
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: minio
  ports:
    - name: http
      protocol: TCP
      port: 9000
      targetPort: http
    - name: http-console
      protocol: TCP
      port: 9001
      targetPort: http-console
  publishNotReadyAddresses: true
