infrastructure/minio/res.yaml

---
# Source: minio/templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  namespace: "default"
  labels:
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-11.3.5
    app.kubernetes.io/instance: minio
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  ingressClassName: "nginx"
  rules:
    - host: s3.infrastructure.leuchtturm.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  name: minio-api
  tls:
    - hosts:
        - s3.infrastructure.leuchtturm.io
      secretName: s3.infrastructure.leuchtturm.io-tls
---
# Source: minio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: "default"
  labels:
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-11.3.5
    app.kubernetes.io/instance: minio
    app.kubernetes.io/managed-by: Helm
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: "nginx"
  rules:
    - host: s3-console.infrastructure.leuchtturm.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: minio
                port:
                  name: minio-console
  tls:
    - hosts:
        - s3-console.infrastructure.leuchtturm.io
      secretName: s3-console.infrastructure.leuchtturm.io-tls
